--- a/Development/SafetyNet/SafetyNet/Content/Site.css
+++ b/Development/SafetyNet/SafetyNet/Content/Site.css
@@ -1,5 +1,39 @@
-﻿body
+﻿html
 {
-    background-color: #b71b13;
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+body
+{
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height:100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.red
+{
+    background-color: #e74c3c;
+    
+}
+
+.blue
+{
+    background-color: #22c3e6;
+}
+
+.orange
+{
+    background-color: #e67e22;
+}
+
+.main
+{
+    width: 100%;
+    height:100%;
+    margin: 0px;
 }
