Added Message Controller and collected and distributed location info.

--- a/Development/SafetyNet/SafetyNet/Views/Mobile/AlertView.cshtml
+++ b/Development/SafetyNet/SafetyNet/Views/Mobile/AlertView.cshtml
@@ -6,5 +6,12 @@
 
 
 <div class="main orange">
-    
+    <div class="center">
+        <img id="AlertImage" src="~/Images/Warning-Sign-Big.png" />
+        <div class="big">Emergency</div>
+        <div class="star">You Are In An Earthquake Area</div>
+        <div class="star">Normal Communications Are Down</div>
+        <div class="star">Now Contacted To Safety Net</div>
+        <input id="AlertOk" type="button" value="OK"/>
+    </div>
 </div>
