--- a/Development/SafetyNet/SafetyNet/Views/Mobile/CalmView.cshtml
+++ b/Development/SafetyNet/SafetyNet/Views/Mobile/CalmView.cshtml
@@ -6,6 +6,25 @@
 
 
 <div class="main blue">
-
+    <div class="center">
+        <img id="CalmImage" src="~/Images/Keep-Calm-Big.png" />
+        <div class="big">Remain Calm</div>
+        <div>Come to Safe Zone <br /> to Receive Support</div>
+        <table id="CalmTable">
+            <tr class="calmItem">
+                <td><img class="calmImage" src="~/Images/Shelter-Icon-Small.png" /></td>
+                <td>Shelter</td>
+            </tr>
+            <tr class="calmItem">
+                <td><img class="calmImage" src="~/Images/Food-Icon-Small.png" /></td>
+                <td>Food</td>
+            </tr>
+            <tr class="calmItem">
+                <td><img class="calmImage" src="~/Images/Medical-Icon-Small.png" /></td>
+                <td>Medical</td>
+            </tr>
+        </table>
+        <input id="CalmOk" type="button" value="OK" />
+    </div>
 </div>
 
