--- a/Development/SafetyNet/SafetyNet/Views/Mobile/ConfirmView.cshtml
+++ b/Development/SafetyNet/SafetyNet/Views/Mobile/ConfirmView.cshtml
@@ -5,6 +5,16 @@
 }
 
 <div class="main red">
-    
+    <div id="Top">
+
+    </div>
+
+    <div id="Content">
+
+    </div>
+
+    <div id="Bottom">
+
+    </div>
 </div>
 
