--- a/Development/SafetyNet/SafetyNet/Views/Mobile/UpdateView.cshtml
+++ b/Development/SafetyNet/SafetyNet/Views/Mobile/UpdateView.cshtml
@@ -6,5 +6,15 @@
 
 
 <div class="main red">
-    
+    <div id="Top">
+
+    </div>
+
+    <div id="Content">
+
+    </div>
+
+    <div id="Bottom">
+
+    </div>
 </div>
